--- a/config/database.yml
+++ b/config/database.yml
@@ -14,9 +14,14 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
+  encoding: utf8
+  reconnect: false
   database: db/test.sqlite3
   pool: 5
-  timeout: 5000
+  username: root
+  password: "1234"
+  host: localhost
+
 
 production:
   adapter: sqlite3
